argocd/argo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: fileops-internal
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
    alb.ingress.kubernetes.io/conditions.argogrpc: |
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:665303624691:certificate/1d908885-d10b-4204-b3ce-835ebaa1c27a
  name: argocd
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
    - host: argocd.filesops.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: argogrpc # The grpc service must be placed before the argocd-server for the listening rules to be created in the correct order
                port:
                  number: 80
            pathType: Prefix
          - path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
            pathType: Prefix
